--- a/planning/personal-site-plan.html
+++ b/planning/personal-site-plan.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="personal-site-plan.css">
   </head>
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
+      <h1>[Future in Accounting] Site Plan</h1>
+      <h2>Claire Bowman</h2>
       <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
@@ -20,11 +20,11 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>[The goal of this website to to collect research about the future for someone who may be majoring in accounting. This website will organize the different branches of accounting to help the user determine their decision. So, which direction of accounting will you go?]</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>[For anyone who may not know what field in accounting is the best fit for them.]</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
