--- a/personal-site-plan.html
+++ b/personal-site-plan.html
@@ -57,10 +57,16 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Rubik Mono One]  <!-- change this -->
+        Heading Font: [Victor Mono]  <!-- change this -->
+        <style>
+          @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+        </style>
       </h4>
       <h4>
-        Paragraph Font: [Nanum Gothic Coding]  <!-- change this -->
+        Paragraph Font: [Cutive Mono]  <!-- change this -->
+        <style>
+          @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&display=swap');
+        </style>
       </h4>
       <h3>
         Normal paragraph example
