--- a/personal-site-plan.html
+++ b/personal-site-plan.html
@@ -20,7 +20,7 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[The goal of this website to to collect research about the future for someone who may be majoring in accounting. This website will organize the different branches of accounting to help the user determine their decision. So, which direction of accounting will you go?]</p>  <!-- change this -->
+      <p>[The goal of this website to to collect research about the accounting field. This website will organize the different branches of accounting to help the user determine their decision. So, which direction of accounting will you go?]</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
