--- a/planning/personal-site-plan.html
+++ b/planning/personal-site-plan.html
@@ -129,8 +129,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/homepage_img1.jpg" alt="image for homepage">
+        <img src="images/img2.jpg" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -138,8 +138,8 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/img3.jpg" alt="image for page">
+        <img src="images/img4.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -147,8 +147,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/img5.jpg" alt="image for page3">
+        <img src="images/img6.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -162,19 +162,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/future.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/fields.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/dive.png" alt="page 3 wireframe">
     </main>
   </body>
 
