--- a/planning/personal-site-plan.html
+++ b/planning/personal-site-plan.html
@@ -129,8 +129,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="images/homepage_img1.jpg" alt="image for homepage">
-        <img src="images/img2.jpg" alt="image for homepage">
+        <img src="images/homepage_img1.jpg" alt="image for homepage" width="600">
+        <img src="images/img2.jpg" alt="image for homepage" width="600">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -138,8 +138,8 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/img3.jpg" alt="image for page">
-        <img src="images/img4.jpg" alt="image for page">
+        <img src="images/img3.jpg" alt="image for page" width="600">
+        <img src="images/img4.jpg" alt="image for page" width="600">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -147,8 +147,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/img5.jpg" alt="image for page3">
-        <img src="images/img6.jpg" alt="image for page3">
+        <img src="images/img5.jpg" alt="image for page3" width="600">
+        <img src="images/img6.jpg" alt="image for page3" width="600">
 
       </ul>
       <hr>
