--- a/planning/personal-site-plan.html
+++ b/planning/personal-site-plan.html
@@ -160,19 +160,19 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [Audience and Purpose writen out above the paragraph. Second img at bottom above footer]
       </p>
       <img src="images/future.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [Second img at bottom above footer]
       </p>
       <img src="images/fields.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [Second img at bottom above footer]
       </p>
       <img src="images/dive.png" alt="page 3 wireframe">
     </main>
