--- a/planning/personal-site-plan.html
+++ b/planning/personal-site-plan.html
@@ -124,7 +124,7 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>FURTURE IN ACCOUNTING (Home page)</h3>
       <p>
         [Written copy for the home page here]
       </p>
@@ -133,7 +133,7 @@
         <img src="images/img2.jpg" alt="image for homepage" width="700">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[THE FIELDS (Page 2)]</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
@@ -142,7 +142,7 @@
         <img src="images/img4.jpg" alt="image for page" width="700">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[DEEP DIVE (Page 3)]</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
@@ -158,19 +158,19 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>FUTURE IN ACCOUNTING (Home)</h3>
       <p>         
         [Audience and Purpose writen out above the paragraph. Second img at bottom above footer]
       </p>
       <img src="images/future.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>[THE FIELDS (Page 2)]</h3>
       <p>         
         [Second img at bottom above footer]
       </p>
       <img src="images/fields.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>[DEEP DIVE (Page 3)]</h3>
       <p>         
         [Second img at bottom above footer]
       </p>
