--- a/site/deep.html
+++ b/site/deep.html
@@ -16,9 +16,9 @@
     </a>
     <nav>
         <ul>
-            <a href="site/home.html">Future in Accounting</a>
-            <a href="site/fields.html">The Fields</a>
-            <a href="site/deep.html">Deep Dive</a>
+            <a href="home.html">Future in Accounting</a>
+            <a href="fields.html">The Fields</a>
+            <a href="deep.html">Deep Dive</a>
         </ul>
     </nav>
 </header> 
