--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <a href="planning/personal-site-plan.html">Site Planning</a>
-        <a href="site/home.html">Home Page for actual site</a>
+        <a href="home.html">Home Page for actual site</a>
     </nav>
 </body>
 </html>
