--- a/deep.html
+++ b/deep.html
@@ -16,7 +16,7 @@
     </a>
     <nav>
         <ul>
-            <a href="home.html">Future in Accounting</a>
+            <a href="index.html">Future in Accounting</a>
             <a href="fields.html">The Fields</a>
             <a href="deep.html">Deep Dive</a>
         </ul>
