--- a/deep.html
+++ b/deep.html
@@ -54,5 +54,9 @@
         <h1>Auditing</h1>
         <p>Auditors earn an average salary of $50,000 to $90,000 annually. Their day-to-day tasks include examining financial statements, evaluating internal controls, ensuring compliance with regulations, and identifying discrepancies. They focus on accuracy, transparency, and fraud detection. Key skills include attention to detail, analytical thinking, proficiency with auditing software, and strong communication abilities.</p>
     </section>
+</main>
+<footer>
+    <a href="planning/personal-site-plan.html">Personal Site Plan</a>
+</footer>
 </body>
 </html>
