--- a/fields.html
+++ b/fields.html
@@ -52,5 +52,9 @@
         <h1>Auditing</h1>
         <p>Auditing involves the systematic examination of an organization's financial statements and records to ensure accuracy, compliance, and reliability. It includes evaluating internal controls, detecting errors or fraud, and providing an independent opinion. Auditors help maintain transparency, build stakeholder trust, and support sound financial practices within organizations.</p>
     </section>
+</main>
+<footer>
+    <a href="planning/personal-site-plan.html">Personal Site Plan</a>
+</footer>
 </body>
 </html>
