--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <main>
         <section class="image-one">
             <img
-            src="images/homepage_img1.jpg" width="100%"
+            src="images/homepage_img1.jpg" 
+            width="100%"
+            height="350px"
             alt="Image one"
             />
         </section>
@@ -44,7 +46,8 @@
         </section>
         <section class="image-two">
             <img
-            src="images/img2.jpg" width="75%"
+            src="images/img2.jpg" 
+            width="75%"
             alt="Image two"
             />
         </section>
