--- a/fields.html
+++ b/fields.html
@@ -10,7 +10,7 @@
 <header>
     <a>
         <img
-        src="images/Screenshot 2024-06-05 105020.png" width="100px"
+        src="images/Screenshot 2024-06-05 105020.png" width="200px"
         alt="Logo"
         />
     </a>
@@ -19,41 +19,72 @@
             <a href="index.html">Future in Accounting</a>
             <a href="fields.html">The Fields</a>
             <a href="deep.html">Deep Dive</a>
+            <style>
+                @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+            </style>
         </ul>
     </nav>
 </header> 
 <main>
     <section class="image-three">
         <img
-        src="images/img3.jpg" width="200px"
+        src="images/img3.jpg" 
+        width="100%"
+        height="350px"
         alt="Image three"
-        />
-    </section>
-    <section class="image-four">
-        <img
-        src="images/img4.jpg" width="200px"
-        alt="Image four"
+        
         />
     </section>
     <section class="managerial">
         <h1>Managerial Accounting</h1>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+         </style>
         <p>Managerial accounting focuses on providing financial and operational information to internal stakeholders, enabling effective decision-making, planning, and control. It involves budgeting, performance evaluation, cost management, and financial analysis. Unlike financial accounting, it is forward-looking and tailored to meet the specific needs of management within an organization.</p>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&display=swap');
+          </style>
     </section>
     <section class="financial">
         <h1>Financial Accounting</h1>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+         </style>
         <p>Financial accounting involves recording, summarizing, and reporting an organization’s financial transactions through standardized statements like the balance sheet, income statement, and cash flow statement. It aims to provide accurate financial information to external stakeholders, such as investors and regulators, ensuring transparency and compliance with accounting standards.
         </p>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&display=swap');
+          </style>
     </section>
     <section class="forensic">
         <h1>Forensic Accounting</h1>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+         </style>
         <p>Forensic accounting involves investigating financial records to detect fraud, embezzlement, and other financial discrepancies. It combines accounting, auditing, and investigative skills to analyze complex financial data, often for legal cases. Forensic accountants provide expert testimony in court, supporting legal actions and helping to resolve financial disputes.</p>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&display=swap');
+          </style>
     </section>
     <section class="auditing">
         <h1>Auditing</h1>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+         </style>
         <p>Auditing involves the systematic examination of an organization's financial statements and records to ensure accuracy, compliance, and reliability. It includes evaluating internal controls, detecting errors or fraud, and providing an independent opinion. Auditors help maintain transparency, build stakeholder trust, and support sound financial practices within organizations.</p>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&display=swap');
+          </style>
+    </section>
+    <section class="image-four">
+        <img
+        src="images/img4.jpg" 
+        width="75%"
+        alt="Image four"
+        />
     </section>
 </main>
-<footer>
+<footer class="footnav">
     <a href="planning/personal-site-plan.html">Personal Site Plan</a>
 </footer>
 </body>
