--- a/fields.html
+++ b/fields.html
@@ -10,19 +10,18 @@
 <header>
     <a>
         <img
-        src="images/Screenshot 2024-06-05 105020.png" width="200px"
+        src="images/Screenshot 2024-06-05 105020.png"
+        width="200px"
         alt="Logo"
         />
     </a>
     <nav>
-        <ul>
             <a href="index.html">Future in Accounting</a>
             <a href="fields.html">The Fields</a>
             <a href="deep.html">Deep Dive</a>
             <style>
                 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
             </style>
-        </ul>
     </nav>
 </header> 
 <main>
