--- a/fields.html
+++ b/fields.html
@@ -18,8 +18,8 @@
     <section class="image-three">
         <img
         src="images/img3.jpg" 
-        width="100%"
-        height="350px"
+        width="2000p"
+        height="500p"
         alt="Image three"
         
         />
@@ -40,7 +40,7 @@
     <section class="image-four">
         <img
         src="images/img4.jpg" 
-        width="75%"
+        width="1000p"
         alt="Image four"
         />
     </section>
