--- a/index.html
+++ b/index.html
@@ -12,34 +12,23 @@
             <a href="index.html">Future in Accounting</a>
             <a href="fields.html">The Fields</a>
             <a href="deep.html">Deep Dive</a>
-            <style>
-                @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-            </style>
         </nav>
     </header>
     <main>
         <section class="image-one">
             <img
             src="images/homepage_img1.jpg" 
-            width="100%"
-            height="350px"
+            width="2000p"
+            height="500p"
             alt="Image one"
             />
         </section>
-            <h1>Future in Accounting
-                <style>
-                    @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-                 </style>
-            </h1>
-            <p>The future of accounting is set to be profoundly transformed by advancements in technology, changing the profession’s landscape. Automation and artificial intelligence (AI) are expected to take over routine tasks such as data entry, transaction processing, and basic financial analysis, allowing accountants to focus more on strategic decision-making and advisory roles. Blockchain technology is poised to revolutionize auditing and compliance, providing a transparent and immutable record of transactions that enhances trust and reduces fraud. Furthermore, data analytics and predictive modeling will enable accountants to offer deeper insights and foresight into financial trends, aiding businesses in making informed decisions. The integration of cloud computing will facilitate real-time financial reporting and collaboration, breaking down geographical barriers and improving efficiency. As the role of accountants evolves, there will be a growing emphasis on skills such as data interpretation, cybersecurity, and strategic thinking. Continuous learning and adaptation will be crucial, as regulatory landscapes and technological tools continue to evolve. Ultimately, the future of accounting promises to be more dynamic, with professionals playing a key role in guiding businesses through an increasingly complex and digital financial environment.
-                <style>
-                    @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Nanum+Gothic+Coding&family=Rubik+Mono+One&display=swap');
-                  </style>
-            </p>
+            <h1>Future in Accounting</h1>
+            <p>The future of accounting is set to be profoundly transformed by advancements in technology, changing the profession’s landscape. Automation and artificial intelligence (AI) are expected to take over routine tasks such as data entry, transaction processing, and basic financial analysis, allowing accountants to focus more on strategic decision-making and advisory roles. Blockchain technology is poised to revolutionize auditing and compliance, providing a transparent and immutable record of transactions that enhances trust and reduces fraud. Furthermore, data analytics and predictive modeling will enable accountants to offer deeper insights and foresight into financial trends, aiding businesses in making informed decisions. The integration of cloud computing will facilitate real-time financial reporting and collaboration, breaking down geographical barriers and improving efficiency. As the role of accountants evolves, there will be a growing emphasis on skills such as data interpretation, cybersecurity, and strategic thinking. Continuous learning and adaptation will be crucial, as regulatory landscapes and technological tools continue to evolve. Ultimately, the future of accounting promises to be more dynamic, with professionals playing a key role in guiding businesses through an increasingly complex and digital financial environment.</p>
         <section class="image-two">
             <img
             src="images/img2.jpg" 
-            width="75%"
+            width="1000p"
             alt="Image two"
             />
         </section>
