--- a/fields.html
+++ b/fields.html
@@ -18,8 +18,8 @@
     <section class="image-three">
         <img
         src="images/img3.jpg" 
-        width="2000p"
-        height="500p"
+        width="2000"
+        height="500"
         alt="Image three"
         
         />
@@ -40,7 +40,7 @@
     <section class="image-four">
         <img
         src="images/img4.jpg" 
-        width="1000p"
+        width="1000"
         alt="Image four"
         />
     </section>
