--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <section class="image-one">
             <img
             src="images/homepage_img1.jpg" 
-            width="2000p"
-            height="500p"
+            width="2000"
+            height="500"
             alt="Image one"
             />
         </section>
@@ -28,7 +28,7 @@
         <section class="image-two">
             <img
             src="images/img2.jpg" 
-            width="1000p"
+            width="1000"
             alt="Image two"
             />
         </section>
